--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,22 @@
-{{ define "profile" }}
-	{{ partial "profile.html" . }}
-{{ end }}
-
 {{ define "main" }}
-	{{ partial "post-list.html"  . }}
-	{{ partial "pagination.html" . }}
+<div class="wrap">
+  <header class="header">
+    <h2 class="header__title">{{ .Site.Params.name }}</h2>
+    <h5 class="header__description">{{ .Site.Params.bio }}</h5>
+  </header>
+  <main class="list list--gapped">
+    {{ range where .Paginator.Pages "Section" "ne" "" }}
+    <div class="list__item">
+      <div class="list__item__content">
+        <h3><a href='{{ .URL }}'>{{ .LinkTitle }}</a></h3>
+        <p>Some extra detail here</p>
+      </div>
+      <footer class="list__footer clearfix">
+        <a href="{{ .URL }}" class="u-fr ellipsized">Read More</a>
+      </footer>
+    </div>
+    {{ end }}
+  </main>
+  {{ partial "pagination.html" . }}
+</div>
 {{ end }}
