--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,22 @@
-<footer id="footer">
-    {{ if .Site.Social }}
-        {{ partial "social.html" . }}
-    {{ end }}
-    <p class="small">
+<footer class="footer">
+  <h4 class="footer__heading">Subscribe to my newsfeed</h4>
+  <!-- For MailChimp -->
+  <div id="mc_embed_signup">
+    <form action="//josephrex.us10.list-manage.com/subscribe/post?u=727d4403f160030f0e6c6c818&amp;id=9dade596c2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form" target="_blank" novalidate>
+      <label for="EMAIL" class="u-visuallyhidden">Email address</label>
+      <input type="text" class="feed form__input" name="EMAIL" id="EMAIL" placeholder="Email Address">
+      <div style="position: absolute; left: -5000px;"><input type="text" name="b_727d4403f160030f0e6c6c818_9dade596c2" tabindex="-1" value=""></div>
+      <button class="button button--transparent">Subscribe</button>
+    </form>
+  </div>
+  {{ if .Site.Social }}
+    {{ partial "social.html" . }}
+  {{ end }}
+  <p class="small">
     {{ with .Site.Params.copyright }}
-        {{ . | markdownify }}
+      {{ . | markdownify }}
     {{ else }}
-        © Copyright {{ now.Format "2006" }} {{ .Site.Params.name }}
+      © {{ now.Format "2006" }} {{ .Site.Params.name }}
     {{ end }}
-    </p>
+  </p>
 </footer>
