--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,13 +1,12 @@
-<nav class="main-nav">
-	{{ if not .IsHome }}
-		<a href='{{ .Site.BaseURL }}'> <span class="arrow">←</span>{{ .Site.Params.home | default "Home" }}</a>
-	{{ end }}
-
-	{{ range .Site.Menus.main }}
- 		<a href='{{ .URL }}'>{{ .Name }}</a>
-  	{{ end }}
-
-	{{ if .Site.Params.enableRSS }}
-		<a class="cta" href="{{ .Site.RSSLink }}">{{ .Site.Params.subscribe | default "Subscribe" }}</a>
-	{{ end }}
+<nav class="nav row">
+  <div class="col col-10">
+    <a href="/"><img src="/logo.png" class="nav__logo" alt="Joseph Rex"></a>
+  </div>
+  <div class="col">
+    <div class="nav__menu u-fr">
+      <a href="/about-me" class="u-inherit-color">About Me</a>
+      <a href="/reading-list" class="u-inherit-color">Reading List</a>
+    </div>
+  </div>
 </nav>
+
