--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,18 +1,16 @@
-<nav id="post-nav">
-    {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
-        {{ if .Paginator.HasPrev }}
-        <span class="prev">
-            <a href="{{.Paginator.Prev.URL}}">
-                <span class="arrow">←</span> {{ .Site.Params.newerPosts | default "Newer Posts" }}
-            </a>
-        </span>
-        {{ end }}
-        {{ if .Paginator.HasNext }}
-        <span class="next">
-            <a href="{{.Paginator.Next.URL}}">
-                {{ .Site.Params.olderPosts | default "Older Posts" }}<span class="arrow">→</span>
-            </a>
-        </span>
-        {{ end }}
-    {{ end }}
-</nav>
+<footer class="post__footer">
+  <div class="wrap row">
+    <div class="col">
+      {{ if .Paginator.HasPrev }}
+      <h5>{{ .Site.Params.newerPost | default "Newer Post" }}</h5>
+      <a href="{{.Paginator.Prev.URL}}">Recent title</a>
+      {{ end }}
+    </div>
+    <div class="col u-txtright">
+      {{ if .Paginator.HasNext }}
+      <h5>{{ .Site.Params.olderPost | default "Older Post" }}</h5>
+      <a href="{{.Paginator.Next.URL}}">Older title</a>
+      {{ end }}
+    </div>
+  </div>
+</footer>
