--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,10 +1,16 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="{{ "js/main.js" | absURL }}"></script>
-<script src="{{ "js/highlight.js" | absURL }}"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=MML_CHTML"></script>
+<script async>
+  // Google Analytics
+  if(navigator.userAgent.indexOf('Speed Insights') === -1){
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-{{ range .Site.Params.customJS }}
-<script src="{{ . | absURL }}"></script>
-{{ end }}
-
-{{ template "_internal/google_analytics.html" . }}
+    ga('create', '{{ .Site.GoogleAnalytics }}', 'auto');
+    ga('send', 'pageview');
+  }
+</script>
+<script src="{{ "js/vendor/barba.min.js" | absURL }}"></script>
+<script src="{{ "js/vendor/web-animations.min.js" | absURL }}"></script>
+<script src="{{ "js/app.js" | absURL }}"></script>
