--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,6 +6,7 @@
       <header class="header">
         <h1 class="post__title">{{ .Title }}</h1>
         <time class="post__date">{{ .Date.Format "January 2, 2006" }}</time>
+        &middot; <span>{{ .ReadingTime }} minutes read</span>
       </header>
       <main>
         <article class="post__article">
@@ -25,6 +26,8 @@
             <div class="col u-txtright">
               <div class="post__actions__action" id="shareDropdown">
                 <div class="post__sharelinks">
+                  <a title="Share on Facebook" aria-label="Share on Facebook" href="https://facebook.com/sharer/sharer.php?u={{.Permalink}}" onclick="window.open(this.href, 'mywin','left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Facebook</a>
+                  <a title="Share on Twitter" aria-label="Share on Twitter" href="https://twitter.com/intent/tweet/?text={{.Title }}&url={{.Permalink}}&via=josephrexme" onclick="window.open(this.href, 'mywin','left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" data-show-count="false">Twitter</a>
                 </div>
                 <svg version="1.1" class="icon" viewBox="0 0 333.324 333.324">
                   <path d="M125.255,59.513l33.907-33.907v149.451c0,4.143,3.358,7.5,7.5,7.5s7.5-3.357,7.5-7.5V25.606l33.907,33.907c1.464,1.464,3.384,2.196,5.303,2.196s3.839-0.732,5.303-2.196c2.929-2.93,2.929-7.678,0-10.607l-46.71-46.71c-2.929-2.928-7.678-2.928-10.606,0l-46.71,46.71c-2.929,2.93-2.929,7.678,0,10.607C117.577,62.441,122.326,62.441,125.255,59.513z"/>
