--- a/static/scss/layout/_base.scss
+++ b/static/scss/layout/_base.scss
@@ -99,10 +99,12 @@ pre {
     background-color: transparent;
   }
   &:not(.line-pre){
+    padding: 0 1.2rem;
     background: linear-gradient(#2f2f2f 50%, darken(#2f2f2f, 5%) 0);
     background-size: 100% 60px;
     border-radius: $inputs-border-radius;
     line-height: 30px;
+    font-size: .8em;
     color: #ddd;
   }
 }
