--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -14,3 +14,4 @@
 <script src="{{ "js/vendor/barba.min.js" | absURL }}"></script>
 <script src="{{ "js/vendor/web-animations.min.js" | absURL }}"></script>
 <script src="{{ "js/app.js" | absURL }}"></script>
+<script src="{{ "js/prism.js" | absURL }}"></script>
