--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1530,8 +1530,7 @@ code {
 
 pre {
   padding: 0 12px;
-  overflow: auto;
-  font-size: 1.6rem; }
+  overflow: auto; }
   pre > code {
     border: 0;
     padding-right: 0;
@@ -1539,10 +1538,12 @@ pre {
     padding: 0;
     background-color: transparent; }
   pre:not(.line-pre) {
+    padding: 0 1.2rem;
     background: linear-gradient(#2f2f2f 50%, #222222 0);
     background-size: 100% 60px;
     border-radius: 4px;
     line-height: 30px;
+    font-size: 18px;
     color: #ddd; }
 
 .wrap {
