Add link to google font

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,7 @@
   {{ else }}
   <link rel="shortcut icon" href="{{ "favicon.ico" | absURL }}">
   {{ end }}
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400">
   <link rel="stylesheet" href="{{ "css/prism.css" | absURL }}">
   <link rel="stylesheet" href="{{ "css/app.css" | absURL }}">
   {{ if .Site.Params.enableRSS }}
