--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,7 +6,8 @@
       <header class="header">
         <h1 class="post__title">{{ .Title }}</h1>
         <time class="post__date">{{ .Date.Format "January 2, 2006" }}</time>
-        &middot; <span>{{ .ReadingTime }} minutes read</span>
+        {{ $rt := .ReadingTime }}
+        &middot; <span>{{ $rt }} minute{{if gt $rt 1}}s{{end}} read</span>
       </header>
       <main>
         <article class="post__article">
