Add scroll progress to top

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <div class="post">
+  <div class="scroll-progress"></div>
   <div class="wrap">
     <section class="container">
       {{ partial "nav.html" . }}
