Improve README and set disqus to receive username from config

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="post">
+<div class="post" data-disqus="{{ .Site.DisqusShortname }}">
   <div class="scroll-progress"></div>
   <div class="wrap">
     <section class="container">
