--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,6 +1,6 @@
 /*!
-  Joseph Rex Blog 2.0 Stylesheet
-  @author Joseph Rex <bl4ckdu5t>
+  Windener Theme Stylesheet
+  @author Joseph Rex
   @since 01-21-2017
 */
 // Base Configuration
@@ -21,7 +21,6 @@
 @import 'components/table';
 @import 'components/social';
 @import 'components/form';
-@import 'components/syntax-highlighting';
 
 // Layout Styles
 @import 'layout/base';
