--- a/static/scss/layout/_post.scss
+++ b/static/scss/layout/_post.scss
@@ -17,6 +17,7 @@
   &__article{
     padding: 0 20px;
     img{ max-width: 100%; }
+    p{ margin: 2rem 0; }
   }
   &__sharelinks{
     position: absolute;
