Use webfont-loader and remove font from head

--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,4 +1,10 @@
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=MML_CHTML"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: { families: ['Source Sans Pro:300,400'] }
+  });
+</script>
 <script async>
   // Google Analytics
   if(navigator.userAgent.indexOf('Speed Insights') === -1){
