--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -33,8 +33,8 @@
   <meta name="twitter:data2" content="{{ .Date.Format "January 2, 2006" }}">
   {{ end }}
   <link rel="dns-prefetch" href="//www.google-analytics.com">
+  <link rel="dns-prefetch" href="//ajax.googleapis.com">
   <link rel="dns-prefetch" href="//stats.g.doubleclick.net">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400">
   <link rel="stylesheet" href="{{ "css/app.css" | absURL }}">
   <link rel="canonical" href="{{ .URL | absURL }}">
   {{ if .Site.Params.enableRSS }}
