--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="{{ if .IsHome }}website{{ else }}article{{ end }}">
   <meta property="og:url" content="{{ .URL | absURL }}">
   <meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}">
-  <meta property="og:image" content="{{ .Site.Params.favicon | absURL }}">
+  <meta property="og:image" content="{{ .Site.Params.banner }}">
   {{ if .IsHome }}
   {{ with .Site.Params.description }}<meta property="og:description" content="{{ . }}">{{ end }}
   {{ else }}
@@ -25,7 +25,7 @@
   <meta name="twitter:site" content="@{{ .Site.DisqusShortname }}">
   <meta name="twitter:creator" content="@{{ .Site.DisqusShortname }}">
   <meta name="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}">
-  <meta name="twitter:img:src" content="{{ .Site.Params.favicon | absURL }}">
+  <meta name="twitter:img:src" content="{{ .Site.Params.banner }}">
   {{ if not .IsHome }}
   <meta name="twitter:label1" content="Author">
   <meta name="twitter:data1" content="{{ .Site.Params.name }}">
@@ -41,7 +41,12 @@
   <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ .Site.RSSLink }}" />
   {{ end }}
   {{ if .Site.Params.favicon }}
-  <link rel="shortcut icon" href="{{ .Site.Params.favicon | absURL }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="{{ .Site.Params.themeColor }}">
+  <meta name="theme-color" content="{{ .Site.Params.themeColor }}">
   {{ else }}
   <link rel="shortcut icon" href="{{ "favicon.ico" | absURL }}">
   {{ end }}
@@ -59,7 +64,7 @@
       "name": "{{ .Site.Params.name }} Blog",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://res.cloudinary.com/strich/image/upload/v1493550549/jr-long-logo_fszgeu.png",
+        "url": "{{ .Site.Params.banner }}",
         "width": 600,
         "height": 60
       }
