Add build scripts to package.json and add highlight CSS

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -21,6 +21,7 @@
 @import 'components/table';
 @import 'components/social';
 @import 'components/form';
+@import 'components/highlight';
 
 // Layout Styles
 @import 'layout/base';
